# trunk

./: .gitignore  Cargo.toml  README.md  composer.json
.github/workflows/: release.yml
src/: main.rs  utils.rs
src/check/: mod.rs  phan.rs  phpstan.rs  psalm.rs
src/cmd/: check.rs  fmt.rs  info.rs  test.rs
src/composer/: json.rs  lock.rs  mod.rs
src/fmt/: mod.rs  php_cs_fixer.rs  pint.rs
src/info/: mod.rs  packages.rs  php.rs  project.rs
src/test/: mod.rs  pest.rs  phpunit.rs
