[package]
name = "pxp-trunk"
description = "The all-in-one tool for managing and developing PHP projects."
documentation = "https://github.com/pxp-lang/trunk/README.md"
homepage = "https://pxplang.org"
repository = "https://github.com/pxp-lang/trunk"
license = "MIT"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
