[package]
name = "pxp-trunk"
description = "The all-in-one tool for managing and developing PHP projects."
documentation = "https://github.com/pxp-lang/trunk/README.md"
homepage = "https://pxplang.org"
repository = "https://github.com/pxp-lang/trunk"
license = "MIT"
version = "0.0.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
colored = "2.1.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[[bin]]
name = "trunk"
path = "src/main.rs"
